Escape user input for logs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,10 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Vet
-        run: go vet
+        run: go vet ./...
+
+      - name: Test
+        run: go test ./...
 
       - name: Build
         run: go build
